c4prj1_deck/grade.txt
Grading at Sun Mar  7 15:29:24 UTC 2021
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:221:10: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
   arr[i] = count;
          ^
eval.c:224:8: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
 return arr;
        ^
eval.c:224:8: error: function returns address of local variable [-Werror=return-local-addr]
cc1: all warnings being treated as errors
Compilation of eval.c failed

Overall Grade: F
